# OpenGL_CMake_Skeleton

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
shader/: shader.frag  shader.vert
src/: Application.cpp  Application.hpp  Application3D.cpp  Application3D.hpp  MyApplication.cpp  MyApplication.hpp  Shader.cpp  Shader.hpp  asset.hpp.in  glError.cpp  glError.hpp  index.html  main.cpp
src/graphic/: Shader.cpp  Shader.hpp
src/system/: Application.cpp  Application.hpp
src/utils/: glError.cpp  glError.hpp
